Feb 23, 2022
  strain specific variants: added generation and loading of strain specific variant and damaging variants for rn7

Feb 04, 2022
  strains: added verbose gff3 header

Feb 03, 2022
  strains: simplified code for handling strains

Jan 19, 2022
  agr: switched to assembly rn7 for rat
  updated log4j to avoid zero day exploit

Nov 30, 2021
  added generation of ontology/CHEBI tracks for GRCm39 assembly
  sped up generation of ontology files

Nov 02, 2021
  agr: fixed

Sep 24, 2021
  ontology extractor: fixed names for generated ontology files, for vervet and molerat

Sep 21, 2021
  NCBI prep: added code to prep fna files for scaffold assemblies for loading into RGD JBrowse
  JBrowse tracks: added support for green monkey Vero_WHO_p1.0 assembly

Jul 14, 2021
  AGR gene extractor: fixed code to not emit duplicate gene entries

Jun 17, 2021
  improved code for handling species

Jun 16, 2021
  rn7.2: added generation and loading of disease/gene-drug tracks
  vervet: chlSab2 assembly: added generation and loading of gene/disease/gene-drug tracks
  molerat: hetGla2 assembly: added generation and loading of gene/disease/gene-drug tracks

Jun 15, 2021
  improved species handling

Jun 11, 2021
  added gff3 qtl extractor and JBrowse track loader for mouse assembly GRCm39

May 18, 2021
  agr extractor: date_produced field aligned with DQM requirements
  damaging variants: fixed sql and code to work with new variant table structure

Apr 29, 2021
  rat strains: added code to generate gff3 files and tracks for mutant and congenic strains on assembly 7.2
  rat qtls: added code to generate gff3 files and tracks for qtls on assembly 7.2

Apr 26, 2021
  rat markers: added export for assembly mRatBN7.2

Jan 28, 2021
  added NcbiPrep tool: to prepare NCBI fasta files for loading into JBrowse
  rat genes: added export for assembly mRatBN7.2

Jan 19, 2021
  genes: removed code referencing UniGene IDs (UniGene IDs removed from RGD database)

Dec 4, 2020