@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Feb 23, 2022 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build May 18, 2022 --" />
 
         <property name="speciesMappings">
             <map>
@@ -129,14 +129,25 @@
         </property>
     </bean>
     <bean id="ensemblPrep" class="edu.mcw.rgd.gff3.EnsemblPrep">
+        <property name="outDir" value="data/Ensembl/"/>
         <property name="ensemblGff">
             <map>
-                <entry key="40"  value="ftp://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.101.gff3.gz"></entry>
-                <entry key="39"  value="ftp://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm38.101.gff3.gz"></entry>
-                <entry key="912" value="ftp://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.101.gff3.gz"></entry>
-                <entry key="361" value="ftp://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.Rnor_6.0.101.gff3.gz"></entry>
-                <entry key="512" value="ftp://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.101.gff3.gz"></entry>
-                <entry key="632" value="ftp://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.CanFam3.1.101.gff3.gz"></entry>
+                <entry key="40"  value="ftp://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.106.gff3.gz"></entry>
+                <entry key="240" value="ftp://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.106.gff3.gz"></entry>
+                <entry key="912" value="ftp://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.106.gff3.gz"></entry>
+                <entry key="373" value="ftp://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.mRatBN7.2.106.gff3.gz"></entry>
+                <entry key="512" value="ftp://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.106.gff3.gz"></entry>
+                <entry key="638" value="ftp://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.106.gff3.gz"></entry>
+            </map>
+        </property>
+        <property name="ensemblJBrowseDataDirs">
+            <map>
+                <entry key="40"  value="data_hg38"></entry>
+                <entry key="240" value="data_mm39"></entry>
+                <entry key="912" value="data_pig11_1"></entry>
+                <entry key="373" value="data_rn7_2"></entry>
+                <entry key="512" value="data_bonobo1_1"></entry>
+                <entry key="638" value=""></entry>
             </map>
         </property>
     </bean>
